--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link  rel = "stylesheet" href = "stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylest">
 
-    <title> STB </title>
+    <title> Save The Bees </title>
   </head>
 
 
