Save the Bees Knees
youre welcome :)

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <link  rel = "stylesheet" href = "stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylest">
 
-    <title> Save The Bees </title>
+    <title> Save The Bees Knees </title>
   </head>
 
 
   <body>
 
     <div id ="borderimg">
-    <h1><center>THE BEES</center></h1>
-    <h2><center>SAVE THE BEES TO SAVE YOURSELVES</center></h2>
+    <h1><center>THE BEES KNEES</center></h1>
+    <h2><center>SAVE THE BEES KNEES TO SAVE YOURSELVES</center></h2>
     <center><button id = "saveButton" type="button" onClick="onClick()">I AM GOING TO SAVE THE BEES!!!</button></center>
     <center>Count of Bee Savers: <a id="clicks">0</a></center>
     <!--  <center><input type = "button" value = "WELCOME" oneclick="popup()"></center>-->
@@ -90,7 +90,7 @@
 
 
 
-    <h3>5 NEEDS FOR THE BEES</h3>
+    <h3>5 NEEDS FOR THE BEES KNEES</h3>
     <ol>
     <li>Pollinate the Flowers</li>
     <li>Helps the economy</li>
@@ -101,7 +101,7 @@
 
 
 
-    <h3>10 WAYS TO SAVE THE BEES</h3>
+    <h3>10 WAYS TO SAVE THE BEES KNEES</h3>
     <ol>
     <li>Plant a pollinator garden</li>
     <li>Keep or sponsor your own garden hive</li>
@@ -115,7 +115,7 @@
     <li>Adopt a hive at a Bee Sanctuary</li>
   </ol>
 
-  <h3> SAVE THE BEE MERCHANDISE</h3>
+  <h3> SAVE THE BEE KNEE MERCHANDISE</h3>
   <center><a href =" https://www.amazon.com/s/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords=save+the+bee"> Buy Some Merch Now !!! </a></center>
   <center><img src= "https://i.pinimg.com/originals/c4/29/77/c429770295f3ed9f2b5c9dae6f111f2d.jpg"
   width = "450" height = "400"/></center>
